--- a/index.html
+++ b/index.html
@@ -175,8 +175,7 @@
       <div class="slides">
         <section>
           <h2>
-            Feature Flagging is Just Simple Booleans:
-            <span id="slide1-title"></span>
+            <span id="title-slide-title"></span>
           </h2>
           <h4>Brian Rinaldi</h4>
           <h4><a href="https://twitter.com/remotesynth">@remotesynth</a></h4>
@@ -203,7 +202,7 @@
         <section data-background-image="/images/background2.jpg">
           <h3>What the heck are feature flags?</h3>
           <p>
-            A feature flag (often called a toggle) is a condition/variable that
+            A feature flag (often called a toggle) is a tool that
             enables or disables a portion of code (ex. a feature in
             development). Code within the block will only run if the condition
             is true.
@@ -246,12 +245,7 @@
 			<ul>
 				<li>Eliminate long running branches</li>
 				<li>Push changes directly to <code>main</code> or merge frequently</li>
-				<li>CI/CD
-					<ul>
-						<li>Always be deploying</li>
-						<li>Test merges before they are approved/deployed</li>
-					</ul>
-				</li>
+				<li>CI/CD (always be deploying)</li>
 			</ul>
 		</section>
         <section data-background-image="/images/background2.jpg">
@@ -317,13 +311,12 @@ flags:
 			</ul>
 		</section>
 		<section data-background-image="/images/background.jpg">
-			<blockquote>The demos here will all be LaunchDarkly (for obvious reasons) and using JavaScript but the principles generally apply across different flag systems and languages.</blockquote>
+      <h3>Aside</h3>
+      <ul>
+        <li>Demos use LaunchDarkly (for obvious reasons) but principles apply to other flag systems</li>
+        <li>Code is plain JavaScript. If you use a framework (ex. React, Vue) there are SDKs to support you.</li>
+      </ul>
 		</section>
-    <section data-background-image="/images/background4.jpg">
-      <h3>Unofficial LaunchDarkly CFML SDK</h3>
-      <p>Maintained by the ColdBox team:</p>
-      <p><a href="https://github.com/coldbox-modules/LaunchDarklySDK">https://github.com/coldbox-modules/LaunchDarklySDK</a></p>
-    </section> 
     <section>
       <h3>Getting Flag Values in LaunchDarkly</h3>
       <p>Initialize the SDK client:</p>
@@ -407,7 +400,7 @@ flags:
 		<section data-background-image="/images/background.jpg">
 			<h3>Experimentation</h3>
 			<div class="button-wrapper">
-				<a id="CTAButton" class="button cta-button" href="http://localhost:8000/#/26" onclick="console.log('Flushing');client.flush();">Do thing!</a>
+				<a id="CTAButton" class="button cta-button" href="http://localhost:8000/#/25" onclick="console.log('Flushing');client.flush();">Do thing!</a>
 			</div>
 			<p id="experiments-userid" style="font-size:small;"></p><button onclick="changeUser(null,'experiments-userid')">Change User</button>
 		</section>
@@ -558,30 +551,30 @@ rewriter.on("h1", new H1ElementHandler());</code></pre>
       const client = LDClient.initialize("62d707f7ec8ffa10f6e7dafc", user);
       client.on("ready", function () {
         // TITLE CHANGE
-        const slide1Title = client.variation("slide1-title", "🤷");
-        setStringFlagToInnerHTML("slide1-title", slide1Title);
-        client.on("change:slide1-title", function (flagValue) {
-          setStringFlagToInnerHTML("slide1-title", flagValue);
+        const slide1Title = client.variation("title-slide-title", "🤷");
+        setStringFlagToInnerHTML("title-slide-title", slide1Title);
+        client.on("change:title-slide-title", function (flagValue) {
+          setStringFlagToInnerHTML("title-slide-title", flagValue);
         });
 
         //CSS CHANGE
-        const slide1CSS = client.variation("slide1-stylesheet", "white");
-        changeTheme(slide1CSS);
-        client.on("change:slide1-stylesheet", function (flagValue) {
+        const slideCSS = client.variation("slide-stylesheet", "white");
+        changeTheme(slideCSS);
+        client.on("change:slide-stylesheet", function (flagValue) {
           changeTheme(flagValue);
         });
 
         //BACKGROUND IMAGE CHANGE
-        const slide1background = client.variation(
-          "slide1-background-image",
+        const titleSlideBackground = client.variation(
+          "title-slide-background",
           "false"
         );
         toggleBackgroundImage(
           1,
           "/images/title_background.jpg",
-          slide1background
+          titleSlideBackground
         );
-        client.on("change:slide1-background-image", function (flagValue) {
+        client.on("change:title-slide-background", function (flagValue) {
           toggleBackgroundImage(1, "/images/title_background.jpg", flagValue);
         });
 
